Document screenplay exports and preview image hooks
Co-authored-by: benrman <benrman@users.noreply.github.com>